prevent text of Hermeneutics in SwitchLayer to be cut on smaller screen size

--- a/src/styles/components/SwitchLayer.scss
+++ b/src/styles/components/SwitchLayer.scss
@@ -2,6 +2,7 @@ ul.SwitchLayer{
   pointer-events: auto;
   margin-right: 70px;
   margin-left: 0;
+  padding-left:0;
   li{
     list-style: none;
     margin: 0;
